update(bot)  - 图片输出